# burnoutradar

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/burnoutradar/: __init__.py  cli.py  models.py  report.py  simulator.py
src/burnoutradar/analyzer/: __init__.py  balance.py  team.py  workload.py
src/burnoutradar/detector/: __init__.py  predictor.py  scorer.py  signals.py
tests/: test_balance.py  test_benchmark.py  test_core.py  test_integration.py  test_predictor.py  test_scorer.py  test_signals.py  test_simulator.py  test_team.py  test_workload.py
