[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burnoutradar"
version = "0.1.0"
description = "AI Burnout Predictor - Burnout risk assessment using MBI framework"
authors = [
    { name = "Mukunda Katta" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
burnoutradar = "burnoutradar.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
